--- a/game_nation/templates/commentaire/index.html.twig
+++ b/game_nation/templates/commentaire/index.html.twig
@@ -1,11 +1,10 @@
 {% extends 'base_back.html.twig' %}
 
-<title>Commentaire index</title>
 
 {% block content %}
     <h1>Commentaire index</h1>
-
-    <table class="table">
+    <input type="text" id="search" name="search" class="form-control" placeholder="Search by ....">
+    <table class="table" id="tableac">
         <thead>
             <tr>
                 <th>Id</th>
@@ -34,6 +33,40 @@
         {% endfor %}
         </tbody>
     </table>
+    <div id="div_chart"></div>
 
-    <a href="{{ path('app_commentaire_new') }}">Create new</a>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+        {{ gc_draw(piechart, 'div_chart') }}
+    </script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $('#search').keyup(function(){
+                search_table($(this).val());
+            });
+            function search_table(value){
+                $('#tableac tbody tr').each(function(){
+                    var found = 'false';
+                    $(this).each(function(){
+                        if($(this).text().toLowerCase().indexOf(value.toLowerCase()) >= 0)
+                        {
+                            found = 'true';
+                        }
+                    });
+                    if(found === 'true')
+                    {
+                        $(this).show();
+
+                    }
+                    else
+                    {
+                        $(this).hide();
+
+                    }
+                });
+            }
+        });
+    </script>
+
 {% endblock %}
